# mananeras

./: .gitignore  .gitlab-ci.yml  Makefile  Pipfile  download_urls.py  main.py  pyproject.toml  readme.md  urls.txt
.github/workflows/: scrape.yml
articulos/2018/diciembre/: 01--discurso-de-andres-manuel-lopez-obrador-presidente-de-los-estados-unidos-mexicanos.txt  01--discurso-del-lic-andres-manuel-lopez-obrador-durante-su-toma-de-posesion-como-presidente-de-los-estados-unidos-mexicanos-331219.txt  01--mensaje-del-presidente-de-los-estados-unidos-mexicanos-andres-manuel-lopez-obrador.txt  03--palabras-del-presidente-andres-manuel-lopez-obrador-durante-la-firma-del-decreto-presidencial-para-la-verdad-en-el-caso-ayotzinapa.txt  04--primera-reunion-del-presidente-andres-manuel-lopez-obrador-con-gobernadora-y-gobernadores.txt  07--mensaje-del-presidente-andres-manuel-lopez-obrador-en-tuxpan-nayarit.txt  08--mensaje-del-presidente-andres-manuel-lopez-obrador-en-presentacion-del-programa-nacional-de-electricidad.txt  14--acuerdo-para-garantizar-el-derechoalasalud.txt  (+15 more)
code/: download_articles.py  extract_dialogs.py
data/: dataset-metadata.json
mananeras/: __init__.py  __main__.py  entities.py  reader.py
mananeras/dataset/: download_articles.py  download_urls.py  extract_dialogs.py
tests/: conftest.py  test_extract_dialogs.py  test_reader.py
tests/sample_docs/: conferencia-11-de-septiembre-2019.html  conferencia-28-de-junio-de-2021.html  ejemplo.txt
utils/: download_articles.py  download_urls.py  extract_dialogs.py
(+3685 files in other folders)
