[tool.poetry]
name = "mananeras"
version = "0.1.3"
description = "Las conferencias mananeras del presidente de México"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
html5lib = "^1.1"
lxml = "^4.6.3"
kaggle = "^1.5.12"
click = "^7"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.*"
flake8 = "^3.9.2"
isort = "^5.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
  )/
)
'''

[tool.flake8]
max-line-length = 120
per-file-ignores = [
]
exclude = [
]

[tool.isort]
skip_glob = [
]

# Structure
default_section = "THIRDPARTY"
known_first_party = "mananeras"

# Import Style
line_length = 88
force_grid_wrap = false
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
multi_line_output = 3